--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 								with experienced professionals to further develop my skills and capabilities. My goal is
 								to provide optimized IT services that make a positive impact on our communities.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
+								<li class="d-flex"><span>Name:</span> <span>Ping Sun</span></li>
 								<!--<li class="d-flex"><span>Name:</span> <span>Ping Sun</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
 								<li class="d-flex"><span>Address:</span> <span>Belconnen, ACT 2617</span></li>
