--- a/index.html
+++ b/index.html
@@ -126,13 +126,12 @@
 								with experienced professionals to further develop my skills and capabilities. My goal is
 								to provide optimized IT services that make a positive impact on our communities.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>Ping Sun</span></li>
+
 								<!--<li class="d-flex"><span>Name:</span> <span>Ping Sun</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-								<li class="d-flex"><span>Address:</span> <span>Belconnen, ACT 2617</span></li>
+								<li class="d-flex"><span>Address:</span> <span>ACT 2617</span></li>
 								<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-								<li class="d-flex"><span>Email:</span> <span>pingsun1110@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>+61 421 866 117</span></li>-->
+
 							</ul>
 						</div>
 					</div>
@@ -166,56 +165,60 @@
 						<h2>Master of Information Technology Systems in Network Technologies</h2>
 						<span class="position">University of Canberra</span>
 						<!--<p class="mt-4"></p>-->
+						</div>
+						<div class="resume-wrap ftco-animate">
+							<span class="date">2021-2022</span>
+							<h2>Bachelor of English (Logistics)</h2>
+							<span class="position">Jilin Huaqiao Foreign Languages Institut</span>
+							<!--<p class="mt-4"></p>-->
+						</div>
+						<div class="resume-wrap ftco-animate">
+							<span class="date">2014-2015</span>
+							<h2>Diploma in Computer</h2>
+							<span class="position">Cambridge University</span>
+							<p class="mt-4">A small river named Duden flows by their place and supplies it with the
+								necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
+								fly
+								into your mouth.</p>
+						</div>
 					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2022</span>
-						<h2>Bachelor of English (Logistics)</h2>
-						<span class="position">Jilin Huaqiao Foreign Languages Institut</span>
-						<!--<p class="mt-4"></p>-->
-					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2014-2015</span>
-						<h2>Diploma in Computer</h2>
-						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
-					</div>
-				</div>
 
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2014-2015</span>
-						<h2>Art &amp; Creative Director</h2>
-						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
+					<div class="col-md-6">
+						<div class="resume-wrap ftco-animate">
+							<span class="date">2014-2015</span>
+							<h2>Art &amp; Creative Director</h2>
+							<span class="position">Cambridge University</span>
+							<p class="mt-4">A small river named Duden flows by their place and supplies it with the
+								necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
+								fly
+								into your mouth.</p>
+						</div>
+						<div class="resume-wrap ftco-animate">
+							<span class="date">2014-2015</span>
+							<h2>Wordpress Developer</h2>
+							<span class="position">Cambridge University</span>
+							<p class="mt-4">A small river named Duden flows by their place and supplies it with the
+								necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
+								fly
+								into your mouth.</p>
+						</div>
+						<div class="resume-wrap ftco-animate">
+							<span class="date">2017-2018</span>
+							<h2>UI/UX Designer</h2>
+							<span class="position">Cambridge University</span>
+							<p class="mt-4">A small river named Duden flows by their place and supplies it with the
+								necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
+								fly
+								into your mouth.</p>
+						</div>
 					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2014-2015</span>
-						<h2>Wordpress Developer</h2>
-						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
-					</div>
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2017-2018</span>
-						<h2>UI/UX Designer</h2>
-						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
+				</div>
+				<div class="row justify-content-center mt-5">
+					<div class="col-md-6 text-center ftco-animate">
+						<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="row justify-content-center mt-5">
-				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
-				</div>
-			</div>
-		</div>
 	</section>
 
 	<section class="ftco-section" id="services-section">
